# simple-nonogram-solver-demo

./: .rustfmt.toml  Cargo.toml
src/: board.rs  main.rs  nonogram_solver.rs  solver.rs  tests.rs
