[package]
name = "nonogram_solver"
version = "0.1.0"
authors = ["shoco <shoco13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.0"
itertools = "0.10.0"

[profile.dev.package.'*']
opt-level = 3